--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -15,10 +15,10 @@
   "ok": "OK",
   "name": "Name",
   "comment": "Msg",
-  "eat-kano": "Eat Ado",
+  "eat-kano": "Ado Tapper",
   "default-dfjk": "DFJK by default",
   "default-20s": "20 seconds by default",
-  "game-title": "Eat Ado",
+  "game-title": "Ado Tapper",
   "game-intro1": "Start from the bottom",
   "game-intro2": "Can you tap 150 times?",
   "record-rank": "To record rank(filtered special chars)",
@@ -37,7 +37,7 @@
   "text-level-4": "Awesome",
   "text-level-5": "R U kidding?",
   "time-over": "You've cheated for ",
-  "rank-title": "Eat Kano - Ranking",
+  "rank-title": "Ado Tapper - Ranking",
   "query-record": "Query Record",
   "day-rank": "Ranking[daily]",
   "week-rank": "Ranking[weekly]",
